Fixed header visibility on second part of section

--- a/styles/$pages/projects.scss
+++ b/styles/$pages/projects.scss
@@ -208,6 +208,9 @@
           @media (max-width: $phone) {
             @media (min-width: 350px) {
               margin-top: -50px;
+              h2 {
+                max-width: 50%;
+              }
             }
           }
           display: grid;
